--- a/CS @ NIU/programs.plist
+++ b/CS @ NIU/programs.plist
@@ -4,31 +4,31 @@
 <array>
 	<dict>
 		<key>name</key>
-		<string>BS Degree</string>
+		<string>BS Degree at NIU</string>
 		<key>website</key>
 		<string>http://catalog.niu.edu/preview_program.php?catoid=41&amp;poid=9186&amp;hl=%22computer+science%22&amp;returnto=search</string>
 	</dict>
 	<dict>
 		<key>name</key>
-		<string>MS Degree</string>
+		<string>MS Degree at NIU</string>
 		<key>website</key>
 		<string>http://catalog.niu.edu/preview_program.php?catoid=8&amp;poid=1279&amp;returnto=217</string>
 	</dict>
 	<dict>
 		<key>name</key>
-		<string>Mobile Device Programming (UnderGrad)</string>
+		<string>CS Mobile Device Programming (UG)</string>
 		<key>website</key>
 		<string>http://www.cs.niu.edu/undergraduate/mp.shtml</string>
 	</dict>
 	<dict>
 		<key>name</key>
-		<string>Mobile Device Programming (Grad)</string>
+		<string>CS Mobile Device Programming (G)</string>
 		<key>website</key>
 		<string>http://www.cs.niu.edu/graduate/mp.shtml</string>
 	</dict>
 	<dict>
 		<key>name</key>
-		<string>Recruiters</string>
+		<string>Computer Science Recruiters</string>
 		<key>website</key>
 		<string>http://www.cs.niu.edu/aboutus/recruiting.shtml</string>
 	</dict>
